trunk/Wrappers/MyGUI.Export/Generate/MyGUI.Export_TabControl.h


		typedef void (MYGUICALLBACK *ExportHandle)(
			Convert<MyGUI::TabControl *>::Type ,
			Convert<size_t>::Type );

		
		MYGUIEXPORT void MYGUICALL ExportTabControlEvent_DelegateTabChangeSelect( ExportHandle _delegate )
		{
			mExportHandle = _delegate;
		}

		MYGUIEXPORT void MYGUICALL ExportTabControlEvent_AdviseTabChangeSelect( MyGUI::Widget* _widget, bool _advise )
		{
			if (_advise)
				static_cast< MyGUI::TabControl* >(_widget)->eventTabChangeSelect += MyGUI::newDelegate(OnEvent);
			else
				static_cast< MyGUI::TabControl* >(_widget)->eventTabChangeSelect -= MyGUI::newDelegate(OnEvent);
		}

		MYGUIEXPORT Convert<int>::Type MYGUICALL ExportTabControl_GetButtonWidth_item( MyGUI::Widget* _native,
			Convert<MyGUI::TabItem *>::Type _item )
		{
			return Convert<int>::To( static_cast< MyGUI::TabControl * >(_native)->getButtonWidth(
				Convert<MyGUI::TabItem *>::From( _item ) ));
		}

		MYGUIEXPORT Convert<int>::Type MYGUICALL ExportTabControl_GetButtonWidthAt_index( MyGUI::Widget* _native,
			Convert<size_t>::Type _index )
		{
			return Convert<int>::To( static_cast< MyGUI::TabControl * >(_native)->getButtonWidthAt(
				Convert<size_t>::From( _index ) ));
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_SetButtonWidth_item_width( MyGUI::Widget* _native,
			Convert<MyGUI::TabItem *>::Type _item ,
			Convert<int>::Type _width )
		{
			static_cast< MyGUI::TabControl * >(_native)->setButtonWidth(
				Convert<MyGUI::TabItem *>::From( _item ) ,
				Convert<int>::From( _width ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_SetButtonWidthAt_index_width( MyGUI::Widget* _native,
			Convert<size_t>::Type _index ,
			Convert<int>::Type _width )
		{
			static_cast< MyGUI::TabControl * >(_native)->setButtonWidthAt(
				Convert<size_t>::From( _index ) ,
				Convert<int>::From( _width ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_BeginToItemSelected( MyGUI::Widget* _native )
		{
			static_cast< MyGUI::TabControl * >(_native)->beginToItemSelected( );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_BeginToItemLast( MyGUI::Widget* _native )
		{
			static_cast< MyGUI::TabControl * >(_native)->beginToItemLast( );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_BeginToItemFirst( MyGUI::Widget* _native )
		{
			static_cast< MyGUI::TabControl * >(_native)->beginToItemFirst( );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_BeginToItem_item( MyGUI::Widget* _native,
			Convert<MyGUI::TabItem *>::Type _item )
		{
			static_cast< MyGUI::TabControl * >(_native)->beginToItem(
				Convert<MyGUI::TabItem *>::From( _item ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_BeginToItemAt_index( MyGUI::Widget* _native,
			Convert<size_t>::Type _index )
		{
			static_cast< MyGUI::TabControl * >(_native)->beginToItemAt(
				Convert<size_t>::From( _index ) );
		}

		MYGUIEXPORT Convert<const MyGUI::UString &>::Type MYGUICALL ExportTabControl_GetItemName_item( MyGUI::Widget* _native,
			Convert<MyGUI::TabItem *>::Type _item )
		{
			return Convert<const MyGUI::UString &>::To( static_cast< MyGUI::TabControl * >(_native)->getItemName(
				Convert<MyGUI::TabItem *>::From( _item ) ));
		}

		MYGUIEXPORT Convert<const MyGUI::UString &>::Type MYGUICALL ExportTabControl_GetItemNameAt_index( MyGUI::Widget* _native,
			Convert<size_t>::Type _index )
		{
			return Convert<const MyGUI::UString &>::To( static_cast< MyGUI::TabControl * >(_native)->getItemNameAt(
				Convert<size_t>::From( _index ) ));
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_SetItemName_item_name( MyGUI::Widget* _native,
			Convert<MyGUI::TabItem *>::Type _item ,
			Convert<const MyGUI::UString &>::Type _name )
		{
			static_cast< MyGUI::TabControl * >(_native)->setItemName(
				Convert<MyGUI::TabItem *>::From( _item ) ,
				Convert<const MyGUI::UString &>::From( _name ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_SetItemNameAt_index_name( MyGUI::Widget* _native,
			Convert<size_t>::Type _index ,
			Convert<const MyGUI::UString &>::Type _name )
		{
			static_cast< MyGUI::TabControl * >(_native)->setItemNameAt(
				Convert<size_t>::From( _index ) ,
				Convert<const MyGUI::UString &>::From( _name ) );
		}

		MYGUIEXPORT Convert<MyGUI::Any>::Type MYGUICALL ExportTabControl_GetItemData_item( MyGUI::Widget* _native,
			Convert<MyGUI::TabItem *>::Type _item )
		{
			Convert<MyGUI::Any>::Type* data = 
				static_cast< MyGUI::TabControl * >(_native)->getItemData< Convert<MyGUI::Any>::Type >(
					Convert<MyGUI::TabItem *>::From( _item ) , false );
			return data == nullptr ? nullptr : *data;
		}

		MYGUIEXPORT Convert<MyGUI::Any>::Type MYGUICALL ExportTabControl_GetItemDataAt_index( MyGUI::Widget* _native,
			Convert<size_t>::Type _index )
		{
			Convert<MyGUI::Any>::Type* data = 
				static_cast< MyGUI::TabControl * >(_native)->getItemDataAt< Convert<MyGUI::Any>::Type >(
					Convert<size_t>::From( _index ) , false );
			return data == nullptr ? nullptr : *data;
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_ClearItemData_item( MyGUI::Widget* _native,
			Convert<MyGUI::TabItem *>::Type _item )
		{
			static_cast< MyGUI::TabControl * >(_native)->clearItemData(
				Convert<MyGUI::TabItem *>::From( _item ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_ClearItemDataAt_index( MyGUI::Widget* _native,
			Convert<size_t>::Type _index )
		{
			static_cast< MyGUI::TabControl * >(_native)->clearItemDataAt(
				Convert<size_t>::From( _index ) );
		}

		MYGUIEXPORT Convert<bool>::Type MYGUICALL ExportTabControl_GetSmoothShow( MyGUI::Widget* _native )
		{
			return Convert<bool>::To( static_cast< MyGUI::TabControl * >(_native)->getSmoothShow( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_SetSmoothShow( MyGUI::Widget* _native , Convert<bool>::Type _value )
		{
			static_cast< MyGUI::TabControl * >(_native)->setSmoothShow( Convert<bool>::From( _value ) );
		}

		MYGUIEXPORT Convert<bool>::Type MYGUICALL ExportTabControl_GetButtonAutoWidth( MyGUI::Widget* _native )
		{
			return Convert<bool>::To( static_cast< MyGUI::TabControl * >(_native)->getButtonAutoWidth( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_SetButtonAutoWidth( MyGUI::Widget* _native , Convert<bool>::Type _value )
		{
			static_cast< MyGUI::TabControl * >(_native)->setButtonAutoWidth( Convert<bool>::From( _value ) );
		}

		MYGUIEXPORT Convert<int>::Type MYGUICALL ExportTabControl_GetButtonDefaultWidth( MyGUI::Widget* _native )
		{
			return Convert<int>::To( static_cast< MyGUI::TabControl * >(_native)->getButtonDefaultWidth( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_SetButtonDefaultWidth( MyGUI::Widget* _native , Convert<int>::Type _value )
		{
			static_cast< MyGUI::TabControl * >(_native)->setButtonDefaultWidth( Convert<int>::From( _value ) );
		}